add comment for clarity: last commit was worded slightly wrong, refer to comment

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -9,8 +9,10 @@
     bottom: 0
 }
 
+
+/* MAKES BIG FONT NOT APPLY TO NAVBAR TO STOP OVERFLOW */
 .navbar .MuiBottomNavigationAction-label {
-  font-size: 0.75rem;
+  font-size: 0.75rem; 
 }
 
 .navbar .Mui-selected .MuiBottomNavigationAction-label {
